@@ -1,3 +1,8 @@
+2005-12-09 nowel <nowel@xole.net>
+
+    * Phing PHP Archive Task
+        PHP Archive(phar) 化を行う Phing Task を作成しました。
+
 2005-12-07 nowel <nowel@xole.net>
 
 ================ S2Dao.PHP5-1.0.0-beta2 更新履歴 ===================
